syntax = "proto3";
package  protos;
import "google/protobuf/empty.proto";
option go_package = "gitlab.com/Abdurahmonjon/studentproto";

service StudentService{
  rpc RegisterStudent(RegisterStudentRequest) returns (RegisterStudentResponse);
  rpc UpdateStudent(UpdateStudentRequest) returns (Response);
  rpc DeleteStudent(DeleteStudentRequest) returns (google.protobuf.Empty);
  rpc GetAllStudents(GetAllStudentsRequest) returns (GetAllStudentsResponse);
  rpc GetStudent(GetStudentRequest) returns (RegisterStudentResponse);
}

message UpdateStudentRequest {
  string id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
}

message GetAllStudentsResponse {
  repeated RegisterStudentResponse students = 1;
}

message GetAllStudentsRequest{
  int32 page = 1;
  int32 limit = 2;
}

message RegisterStudentResponse {
  string id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
}

message Response {
  string ok = 1;
}

message GetStudentRequest {
  string id = 1;
}

message DeleteStudentRequest {
  string id = 1;
}

message RegisterStudentRequest {
  string user_name = 1;
  string first_name = 2;
  string last_name = 3;
}